--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>title</title>
 </head>
 <body>
 
+<form action="login.html" th:action="@{/login}">
+    <fieldset>
+        <legend>Teacher Talk Login</legend>
+        <label for="loginEmail">
+            Email <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}">
+        </label>
+        <label for="loginPassword">
+            Email <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}">
+        </label>
+        <input type="checkbox" id="rememberMe" name="rememberMe" th:value="${rememberUser}">
+        <label for="rememberMe">Remember me?</label>
+    </fieldset>
+    <button type="submit">Login</button>
+</form>
 </body>
 </html>
