--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>title</title>
+    <meta charset="UTF-8"/>
+    <title>Teacher Talk</title>
 </head>
 <body>
 
@@ -10,12 +10,12 @@
     <fieldset>
         <legend>Teacher Talk Login</legend>
         <label for="loginEmail">
-            Email <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}">
+            Email <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}"/>
         </label>
         <label for="loginPassword">
-            Email <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}">
+            Email <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
         </label>
-        <input type="checkbox" id="rememberMe" name="rememberMe" th:value="${rememberUser}">
+        <input type="checkbox" id="rememberMe" name="rememberMe" th:value="${rememberUser}"/>
         <label for="rememberMe">Remember me?</label>
     </fieldset>
     <button type="submit">Login</button>
