--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,12 +13,15 @@
             Email <input type="text" id="loginEmail" name="loginEmail" th:value="${userEmail}"/>
         </label>
         <label for="loginPassword">
-            Email <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
+            Password <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
         </label>
         <input type="checkbox" id="rememberMe" name="rememberMe" th:value="${rememberUser}"/>
         <label for="rememberMe">Remember me?</label>
     </fieldset>
     <button type="submit">Login</button>
+    <button type="submit"><a href="teacherSignUp.html" th:href="@{/teacherSignUp}">Sign-Up</a></button>
 </form>
+
+
 </body>
 </html>
