--- a/src/main/resources/templates/parentSignUp.html
+++ b/src/main/resources/templates/parentSignUp.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<form action="teacherSignUp.html" th:action="@{/teacherSignUp}">
+<form action="parentSignUp.html" th:action="@{/parentSignUp}">
     <fieldset>
-        <legend>Teacher Registration</legend>
+        <legend>Parent Registration</legend>
         <label for="registerFirstName">
             First Name <input type="text" id="registerFirstName" name="loginEmail" th:value="${userEmail}"/>
         </label>
