added user login validation

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="login.html" th:action="@{/login}">
+<form action="login.html" th:action="@{/login}" method="post">
     <fieldset>
         <legend>Teacher Talk Login</legend>
         <label for="loginEmail">
