Created message bean

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -5,6 +5,23 @@
     <title></title>
 </head>
 <body>
-Teacher page
+<h1>Teacher Page</h1>
+
+<form action="teacher.html">
+    <select>
+        <option>Student 1</option>
+        <option>Student 2</option>
+        <option>Student 3</option>
+    </select>
+    <select>
+        <option>Template 1</option>
+        <option>Template 2</option>
+        <option>Template 3</option>
+    </select>
+    <label>
+      Message <textarea></textarea>
+    </label>
+    <button>Send Message</button>
+</form>
 </body>
 </html>
