fixed teacherSignUp html and TeacherTalkController Mapping

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,8 +19,10 @@
         <label for="rememberMe">Remember me?</label>
     </fieldset>
     <button type="submit">Login</button>
-    <button type="submit"><a href="teacherSignUp.html" th:href="@{/teacherSignUp}">Sign-Up</a></button>
 </form>
+
+<a href="teacherSignUp.html" th:href="@{/teacherSignUp}"><button type="submit">Sign-Up Teacher</button></a>
+<button type="submit"><a href="parent.html" th:href="@{/parent}">Sign-Up Parent</a></button>
 
 
 </body>
