--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="parent.html" th:action="@{/parentSignUp}">
+<form action="parent.html" th:action="@{/parent}">
     <fieldset>
         <legend>Parent Registration</legend>
         <label for="registerPrimaryFirstName">
