--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title></title>
@@ -9,14 +9,14 @@
 
 <form action="teacher.html">
     <select>
-        <option>Student 1</option>
-        <option>Student 2</option>
-        <option>Student 3</option>
+        <option th:each="student : ${students}" th:value="${student.getId()}" th:text="${student.getStudentFirstName()} + ' ' +${student.getStudentLastName()} ">Student 1</option>
+        <option th:remove="all">Student 2</option>
+        <option th:remove="all">Student 3</option>
     </select>
     <select>
-        <option>Template 1</option>
-        <option>Template 2</option>
-        <option>Template 3</option>
+        <option th:each="message: ${messages}" th:value="${message.getMessageName()}" th:text="${message.getMessageName()}" >Template 1</option>
+        <option th:remove="all">Template 2</option>
+        <option th:remove="all">Template 3</option>
     </select>
     <label>
       Message <textarea></textarea>
