added separate parentSignUp and parentLogin in Controller and fixed RedirectView to appropriate url

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
 </form>
 
 <a href="teacherSignUp.html" th:href="@{/teacherSignUp}"><button type="submit">Sign-Up Teacher</button></a>
-<button type="submit"><a href="parent.html" th:href="@{/parent}">Sign-Up Parent</a></button>
+<a href="parent.html" th:href="@{/parentSignUp}"><button type="submit">Sign-Up Parent</button></a>
 
 
 </body>
