--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -52,10 +52,9 @@
         </select>
 
     </fieldset>
-
-    <button type="submit">Register</button>
 </form>
 
+<a href="login.html" th:href="@{/}"><button type="submit">Register</button></a>
 
 </body>
 </html>
