java changes teacher

--- a/src/main/resources/templates/teacherSignUp.html
+++ b/src/main/resources/templates/teacherSignUp.html
@@ -14,7 +14,7 @@
         </label>
         <br/>
         <label for="registerLastName">
-            Last Name <input type="text" id="registerLastName" name="registerLastName" th:value="${teacher.getFastName()}"/>
+            Last Name <input type="text" id="registerLastName" name="registerLastName" th:value="${teacher.getLastName()}"/>
         </label>
         <br/>
         <label for="registerEmail">
