--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -13,15 +13,28 @@
         <option th:remove="all">Student 2</option>
         <option th:remove="all">Student 3</option>
     </select>
-    <select>
-        <option th:each="message: ${messages}" th:value="${message.getMessageName()}" th:text="${message.getMessageName()}" >Template 1</option>
+    <select onchange="myFunction()" id="messageSelect">
+        <option th:each="message: ${messages}" th:value="${message.getMessageName()}" th:text="${message.getMessageName()}" th:attr="data-message=${message.getEnglishMessage()}" >Template 1</option>
         <option th:remove="all">Template 2</option>
         <option th:remove="all">Template 3</option>
     </select>
     <label>
-      Message <textarea></textarea>
+      Message <textarea id="messageTextArea">Message Goes Here</textarea>
     </label>
     <button>Send Message</button>
 </form>
+
+<script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+    $("#messageSelect").change(function () {
+
+       var message = $(this).find(':selected').data('message');
+       $('#messageTextArea').val(message);
+
+
+    });
+</script>
+
+
 </body>
 </html>
