--- a/src/main/resources/templates/teacherSignUp.html
+++ b/src/main/resources/templates/teacherSignUp.html
@@ -37,9 +37,9 @@
             Subject Area <input type="text" id="registerSubjectArea" name="registerSubjectArea" th:value="${teacher.getSubjectArea()}"/>
         </label>
     </fieldset>
-    <button type="submit">Register</button>
+
 
 </form>
-
+<a href = "login.html" th:href="@{/}"><button type="submit">Register</button></a>
 </body>
 </html>
