--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Teacher Talk</title>
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="../static/images/teacher-talk-logo.gif" alt="teacher talk logo" />
+        <img src="../static/images/teacher-talk-logo.gif" th:src="${'/images/teacher-talk-logo.gif'}" alt="teacher talk logo" />
         <h1>Teacher Talk</h1>
       </div>
       <nav>
@@ -34,14 +34,14 @@
             <option th:remove="all">Student 2</option>
             <option th:remove="all">Student 3</option>
         </select>
-        <hr>
+        <hr />
 
         <select onchange="myFunction()" id="messageSelect">
             <option th:each="message: ${messages}" th:value="${message.getMessageName()}" th:text="${message.getMessageName()}" th:attr="data-message=${message.getEnglishMessage()}" >Template 1</option>
             <option th:remove="all">Template 2</option>
             <option th:remove="all">Template 3</option>
         </select>
-        <hr>
+        <hr />
         <label>
           Message
           <textarea id="messageTextArea">Message Goes Here</textarea>
