--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="#">Add Student</a></li>
           <li><a href="#">Add Template</a></li>
-          <li><a href="#">History</a></li>
+          <li><a href="#" th:href="@{/messageLog}">History</a></li>
           <li><a href="#">Profile</a></li>
         </ul>
       </nav>
