message log additions for table

--- a/src/main/resources/templates/messageLog.html
+++ b/src/main/resources/templates/messageLog.html
@@ -17,13 +17,28 @@
 
 <table>
     <tr>
-        <th>Log ID</th>
-        <th>Date</th>
-        <th>Message Sent</th>
-        <th>Student Name</th>
-        <th>Parent Name</th>
-        <th>Template Sent</th>
-        <th>Notes</th>
+        <th>
+            <a href="messageLog.html" title="Log ID">Log ID</a>
+        </th>
+        <th>
+            <a href="messageLog.html" title="Date">Date</a>
+        </th>
+        <th>
+            <a href="messageLog.html" title="Message Sent">Message Sent</a>
+        </th>
+        <th>
+            <a href="messageLog.html" title="Student Name">Student Name</a>
+        </th>
+        <th>
+            <a href="messageLog.html" title="Parent Name">Parent Name</a>
+        </th>
+        <th>
+            <a href="messageLog.html" title="Template Sent">Template Sent</a>
+        </th>
+
+        <th>
+            <a href="messageLog.html" title="Notes">Template Sent</a>
+        </th>
     </tr>
 </table>
 </body>
