message log notes fixed

--- a/src/main/resources/templates/messageLog.html
+++ b/src/main/resources/templates/messageLog.html
@@ -37,7 +37,7 @@
         </th>
 
         <th>
-            <a href="messageLog.html" title="Notes">Template Sent</a>
+            <a href="messageLog.html" title="Notes">Notes</a>
         </th>
     </tr>
 </table>
