fixed bug with message send

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -30,7 +30,7 @@
     <div class="container-title">New Message</div>
     <button id="addStudent">+</button>
     <form th:action="@{/sendMessage}" action="teacher.html" method="post">
-        <select id="studentddl" name="student">
+        <select id="studentddl" name="studentddl">
             <option th:each="student : ${students}" th:value="${student.getId()}"
                     th:text="${student.getStudentFirstName()} + ' ' +${student.getStudentLastName()} ">Student 1
             </option>
