--- a/src/main/resources/static/css/partials/_header.scss
+++ b/src/main/resources/static/css/partials/_header.scss
@@ -1,22 +1,21 @@
 header {
   background: $header;
-  height: 100px;
-  padding: 0 50px;
-
+  // height: 75px;
+  padding: 25px 50px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 
 }
 
 .logo {
-  position: relative;
+  // position: relative;
   img {
-    height: 75px;
+    height: 50px;
   }
   h1 {
-    font-size: 1.5rem;
-    position: absolute;
+    font-size: 1.3rem;
+    // position: absolute;
     bottom: 0px;
     left: 80px;
   }
