--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,20 +1,16 @@
 header {
   background: #faf0a1;
-  height: 100px;
-  padding: 0 50px;
+  padding: 25px 50px;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: flex-end; }
 
-.logo {
-  position: relative; }
-  .logo img {
-    height: 75px; }
-  .logo h1 {
-    font-size: 1.5rem;
-    position: absolute;
-    bottom: 0px;
-    left: 80px; }
+.logo img {
+  height: 50px; }
+.logo h1 {
+  font-size: 1.3rem;
+  bottom: 0px;
+  left: 80px; }
 
 nav ul li {
   display: inline-block; }
@@ -49,6 +45,50 @@ nav ul li {
   margin-top: 25px;
   padding: 10px;
   font-weight: 700; }
+
+.remodal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); }
+  .remodal .modal-content {
+    position: relative;
+    top: 30%;
+    box-sizing: border-box;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto 10px;
+    padding: 35px;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    color: #2b2e38;
+    background: #fff;
+    border-top: 25px solid #e88510;
+    border-bottom: 10px solid #e88510; }
+    .remodal .modal-content .update {
+      display: inline-block;
+      min-width: 110px;
+      padding: 12px 0;
+      text-align: center;
+      vertical-align: middle;
+      text-decoration: none; }
+
+.fa-times {
+  position: absolute;
+  right: 15px;
+  top: 5px;
+  font-size: 30px;
+  text-shadow: 2px 2px #ddd; }
+
+.fa-times:hover,
+.fa-times:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer; }
 
 * {
   margin: 0;
@@ -89,17 +129,35 @@ h6 {
 img {
   max-width: 100%; }
 
+a {
+  text-decoration: none;
+  color: #333; }
+
 button {
+  cursor: pointer;
   display: block;
   margin: 15px auto;
-  background: #00b074;
   color: #333;
   font-weight: 700;
-  padding: 10px 30px;
-  border: none; }
-  button a {
-    text-decoration: none;
-    color: #333; }
+  min-width: 200px;
+  border: none;
+  outline: 0;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s; }
+
+.send {
+  background: #00b074; }
+
+.send:hover,
+.send:focus {
+  background: #53b98f; }
+
+.update {
+  background: #e88510; }
+
+.update:hover,
+.update:focus {
+  background: #e2994e; }
 
 input, textarea {
   outline: none; }
@@ -158,7 +216,5 @@ fieldset {
 .login-input button {
   margin: 15px auto;
   padding: 10px 60px; }
-.login-input button:nth-of-type(2) {
-  background: #e88510; }
 
 /*# sourceMappingURL=style.css.map */
