--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -7,6 +7,7 @@ $accent:#ececec; //off white for background
 
 @import "partials/header";
 @import "partials/teacher";
+@import "partials/loginModal";
 
 * {
   margin:0;
@@ -56,18 +57,39 @@ img {
   max-width: 100%;
 }
 
+a {
+  text-decoration: none;
+  color: #333;
+}
+
 button {
+  cursor: pointer;
   display: block;
   margin: 15px auto;
-  background: $primary;
   color: #333;
   font-weight: 700;
-  padding: 10px 30px;
+  min-width: 200px;
+  // padding: 10px 30px;
   border: none;
-  a {
-    text-decoration: none;
-    color: #333;
-  }
+  outline: 0;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+
+.send {
+  background: $primary;
+}
+.send:hover,
+.send:focus {
+  background: #53b98f;
+}
+
+.update {
+  background: $secondary;
+}
+.update:hover,
+.update:focus {
+  background: #e2994e;
 }
 
 input, textarea {
@@ -158,7 +180,4 @@ fieldset {
     padding: 10px 60px;
   }
 
-  button:nth-of-type(2){
-    background: $secondary;
-  }
 }
