adding message log Repo and teachertalkcontroller details for message log

--- a/src/main/resources/templates/messageLog.html
+++ b/src/main/resources/templates/messageLog.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Message Log</title>
+
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}" />
 </head>
 <body>
 
@@ -14,7 +16,7 @@
     <button>Search</button>
 </form>
 
-
+<!--Created table to hold specified items for the message log-->
 <table>
     <tr>
         <th>
