--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -90,12 +90,33 @@ nav ul li {
   text-decoration: none;
   cursor: pointer; }
 
+.faq {
+  border-right: 1px solid #333;
+  width: 55%;
+  margin: 25px 0;
+  padding: 25px; }
+  .faq img {
+    max-height: 250px;
+    padding-bottom: 15px;
+    display: block;
+    margin: 0 auto; }
+  .faq hr {
+    margin: 15px; }
+  .faq h1 {
+    text-align: center;
+    display: block;
+    margin: 0 auto; }
+  .faq h3 {
+    font-weight: 700;
+    margin: 15px 0 5px; }
+
 * {
   margin: 0;
   padding: 0; }
 
 body {
   font-size: 16px;
+  line-height: 1.4;
   font-family: sans-serif;
   color: #333;
   background: #ececec; }
@@ -140,6 +161,7 @@ button {
   color: #333;
   font-weight: 700;
   min-width: 200px;
+  padding: 10px 30px;
   border: none;
   outline: 0;
   -webkit-transition: background 0.2s;
@@ -162,10 +184,12 @@ button {
 input, textarea {
   outline: none; }
 
-#login-page {
+#login-page, #teacherSignUp {
   display: flex;
   justify-content: top;
-  background: #fff; }
+  background: #fff;
+  max-width: 960px;
+  margin: 0 auto; }
 
 .login-shape {
   background: url("../images/login-shapes.gif");
@@ -177,29 +201,29 @@ input, textarea {
 fieldset {
   border: none; }
 
-.login-input {
-  margin: 25px; }
-  .login-input img {
+.login-input, .signup {
+  margin: 25px auto; }
+  .login-input img, .signup img {
     height: 50px; }
 
-.login-input form {
+.login-input form, .signup form {
   text-align: center;
   margin: 15px 0; }
-  .login-input form legend {
+  .login-input form legend, .signup form legend {
     font-weight: 700;
     font-size: 26px;
     margin: 25px auto 15px; }
-  .login-input form label {
+  .login-input form label, .signup form label {
     margin: 10px;
     text-align: right;
     display: block; }
 
-.loginEmail, .loginPassword, .rememberMe {
+label {
   width: 350px;
   padding: 5px;
   font-weight: 700;
   font-size: 1.15rem; }
-  .loginEmail input, .loginPassword input, .rememberMe input {
+  label input {
     border: 1px solid #00b074;
     padding: 10px;
     text-align: left; }
