created forgotPassword html and controller

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
         Remember me?
         </label>
       </fieldset>
-      <p>Forgot Password</p>
+      <p>Forgot Your Password?</p>
       <button type="submit">Login</button>
       <button type="submit"><a href="teacherSignUp.html" th:href="@{/teacherSignUp}">Sign-Up</a></button>
     </form>
