--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
   </div>
 
   <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="../static/js/modal.js"></script>
+  <script th:src="@{/js/modal.js}" src="../static/js/modal.js"></script>
 
 </body>
 </html>
