--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -7,8 +7,9 @@ $accent:#ececec; //off white for background
 
 @import "partials/header";
 @import "partials/teacher";
+@import "partials/login";
 @import "partials/loginModal";
-@import "partials/teacherSignUp";
+@import "partials/signUpPage";
 
 * {
   margin:0;
@@ -46,12 +47,12 @@ h4 {
 }
 
 h5 {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 300;
 }
 
 h6 {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 300;
 }
 
@@ -99,14 +100,19 @@ input, textarea {
 }
 
 ///////////////////////////
-// Login Pag /////////////
+// Login, Signup Page ////
 /////////////////////////
 
-#login-page, #teacherSignUp {
+.faq, .signup, .login-input {
+  background:#fff;
+  margin: 0 auto;
+}
+
+#login-page, #signUpPage {
   display: flex;
   justify-content: top;
-  background: #fff;
-  max-width: 960px;
+  // background: #fff;
+  max-width: 1024px;
   margin: 0 auto;
 }
 
@@ -126,63 +132,50 @@ fieldset {
   border:none;
 }
 
-.login-input, .signup {
-  margin: 25px auto;
 
-  // Logo
-  img {
-    height: 50px;
-  }
-}
+.login-input {
+  padding: 25px 15px;
 
-.login-input, .signup {
   form {
     text-align: center;
     margin: 15px 0;
+    clear: both;
+
     legend {
       font-weight: 700;
       font-size: 26px;
-      margin: 25px auto 15px;
+      margin: 5px auto;
     }
+
     label {
       margin: 10px;
       text-align: right;
       display: block;
+      width: 350px;
+      padding: 5px;
+      font-weight: 700;
+      font-size: 1.15rem;
+
+      input {
+        border:1px solid $primary;
+        padding: 10px;
+        text-align: left;
+      }
     }
   }
 }
 
-label {
-  width: 350px;
-  // display: block;
-  padding: 5px;
-  font-weight: 700;
-  font-size: 1.15rem;
 
-  input {
-    border:1px solid $primary;
-    padding: 10px;
-    text-align: left;
+.login-input{
+  form{
+    .rememberMe {
+      font-size: .8rem;
+    }
   }
 }
 
-.rememberMe {
-  font-size: .8rem;
-  margin: 0 auto;
-
-}
-
-.login-input {
-  p {
-    margin: 0;
-    font-size: .8rem;
-    color: $primary;
-    text-decoration: underline;
-  }
-
-  button {
-    margin: 15px auto;
-    padding: 10px 60px;
-  }
-
+.clearfix::after{
+  content:"";
+  clear: both;
+  display: block;
 }
